--- a/raytracing.html
+++ b/raytracing.html
@@ -1,72 +1,12 @@
 <!DOCTYPE html>
+<html>
 <head>
-<meta charset="utf-8">
-<meta content="width=device-width, initial-scale=1.0, user-scalable=yes" name="viewport">
-<style>
-    code{white-space: pre-wrap;}
-    span.smallcaps{font-variant: small-caps;}
-    span.underline{text-decoration: underline;}
-    div.column{display: inline-block; vertical-align: top; width: 50%;}
-    div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em}
-    ul.task-list{list-style: none;}
-</style>
-<link href="/css/style.css" rel="stylesheet">
-<!--[if lt IE 9]>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js"></script>
-<![endif]-->
-<script src="/js/jquery-3.2.1.min.js"></script>
-<!-- Google tag (gtag.js) -->
-<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-M38VSQ9GME"></script>
-<script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-M38VSQ9GME');
-  </script>
 </head>
 <body>
 <div class="main">
-<div class="centered">
 <canvas height="600" id="canvas" style="border: 1px grey solid" width="600">
 </canvas>
-</div>
-<script>
-var canvas = document.getElementById("canvas");
-var canvas_context = canvas.getContext("2d");
-var canvas_buffer = canvas_context.getImageData(0, 0, canvas.width, canvas.height);
-var canvas_pitch = canvas_buffer.width*4;
-
-// Low-level canvas access
-
-var PutPixel = function(x, y, color) {
-    x = canvas.width/2 + x;
-    y = canvas.height/2 - y - 1;
-    
-    if (x < 0 || x >= canvas.width || y < 0 || y >= canvas.height) {
-        return;
-    }
-
-    var offset = 4*y + canvas_pitch*y;
-    canvas_buffer.data[offset++] = color[0];
-    canvas_buffer.data[offset++] = color[1];
-    canvas_buffer.data[offset++] = color[2];
-    canvas_buffer.data[offset++] = 255; // alpha
-}
-
-var UpdateCanvas = function() {
-    canvas_context.putImageData(canvas_buffer, 0, 0);
-}
-
-// Linear algebra
-
-var DotProduct = function(v1, v2) {
-    return v1[0]*v2[0] + v1[1]*v2[1] + v1[2]*v2[2];
-}
-
-var Subtract = function(v1, v2) {
-    return [v1[0] - v2[0], v1[1] - v2[1], v1[2] - v2[2]];
-}
-</script>
+<script src="raytracing.js"></script>
 </div>
 </body>
 </html>
