--- a/raytracing.html
+++ b/raytracing.html
@@ -126,7 +126,7 @@ var identity = [
     [1, 0, 0],
     [0, 1, 0],
     [0, 0, 1]];
-var camera = new Camera([8, 2, -3], m2);
+var camera = new Camera([0, 0, -4], identity);
 var background_color = [0, 0, 0];
 var spheres = [
     new Sphere([0, -1, 3], 1, [255, 0, 0], 500, 0.2),         // red
@@ -147,7 +147,6 @@ var CanvasToViewport = function(p2d) {
       p2d[1] * viewport_size / canvas.height,
       projection_plane_z];
 }
-
 
 var IntersectRaySphere = function(origin, direction, sphere) {
     // solves the quadratic equation
