Better code organization

--- a/raytracing.html
+++ b/raytracing.html
@@ -6,18 +6,18 @@
 //  canvas access
 // ======================================================================
 
-var canvas = document.getElementById("canvas");
-var canvas_context = canvas.getContext("2d");
-var canvas_buffer = canvas_context.getImageData(0, 0, canvas.width, canvas.height);
-var canvas_pitch = canvas_buffer.width * 4;
+let canvas = document.getElementById("canvas");
+let canvas_context = canvas.getContext("2d");
+let canvas_buffer = canvas_context.getImageData(0, 0, canvas.width, canvas.height);
+let canvas_pitch = canvas_buffer.width * 4;
 
-var PutPixel = function(x, y, color) {
+function PutPixel(x, y, color) {
   x = canvas.width/2 + x;
   y = canvas.height/2 - y - 1;
   if (x < 0 || x >= canvas.width || y < 0 || y >= canvas.height) {
       return;
   }
-  var offset = 4*x + canvas_pitch*y;
+  let offset = 4*x + canvas_pitch*y;
   canvas_buffer.data[offset++] = color[0];
   canvas_buffer.data[offset++] = color[1];
   canvas_buffer.data[offset++] = color[2];
@@ -26,7 +26,7 @@ var PutPixel = function(x, y, color) {
 
 
 // Displays the contents of the offscreen buffer into the canvas.
-var UpdateCanvas = function() {
+function UpdateCanvas() {
   canvas_context.putImageData(canvas_buffer, 0, 0);
 }
 
@@ -35,35 +35,35 @@ var UpdateCanvas = function() {
 //  linear algebra (3D space)
 // ======================================================================
 
-var DotProduct = function(v1, v2) {
+function DotProduct(v1, v2) {
   return v1[0]*v2[0] + v1[1]*v2[1] + v1[2]*v2[2];
 }
 
-var Multiply = function(s, v) {
+function Multiply(s, v) {
     return [v[0] * s, v[1] * s, v[2] * s];
 }
 
-var Add = function(v1, v2) {
+function Add(v1, v2) {
   return [v1[0] + v2[0], v1[1] + v2[1], v1[2] + v2[2]];
 }
 
-var Subtract = function(v1, v2) {
+function Subtract(v1, v2) {
     return Add(v1, Multiply(-1, v2));
 }
 
-var Norm = function(v) {
+function Norm(v) {
     return Math.sqrt(DotProduct(v, v));
 }
 
-var Normalize = function(v) {
-    var norm = Norm(v);
+function Normalize(v) {
+    let norm = Norm(v);
     return Multiply(1/norm, v);
 }
 
-var MultiplyMV = function(mat, vec) {
-    var result = [0, 0, 0];
-    for (var i = 0; i < 3; i++) {
-        for (var j = 0; j < 3; j++) {
+function MultiplyMV(mat, vec) {
+    let result = [0, 0, 0];
+    for (let i = 0; i < 3; i++) {
+        for (let j = 0; j < 3; j++) {
             result[i] += vec[j] * mat[i][j];
         }
     }
@@ -71,11 +71,11 @@ var MultiplyMV = function(mat, vec) {
 }
 
 // ======================================================================
-//  ray tracer
+//  Classes for scene elements.
 // ======================================================================
 
 // A Sphere.
-var Sphere = function(center, radius, color, specular, reflective) {
+function Sphere(center, radius, color, specular, reflective) {
     this.center = center;
     this.radius = radius;
     this.color = color;
@@ -84,88 +84,55 @@ var Sphere = function(center, radius, color, specular, reflective) {
 }
 
 // A Light.
-
-var Light = function(type, intensity, position) {
+function Light(type, intensity, position) {
     this.type = type;
     this.intensity = intensity;
     this.position = position;
 }
 
+// Light types.
 Light.AMBIENT = 0;
 Light.POINT = 1;
 Light.DIRECTIONAL = 2;
 
 // A Camera
-
-var Camera = function(position, rotation) {
+function Camera(position, rotation) {
     this.position = position;
     this.rotation = rotation;
 }
 
-
-// Scene setup.
-var viewport_size = 1;
-var projection_plane_z = 1;
-var EPSILON = 0.001;
-var depth = 3;
-var m1 = [
-    [ 1, 0, 0],
-    [0, 0.7071, 0.7071],
-    [0, -0.7071, 0.7071 ]];
-var m2 = [
-    [0.7071, 0, -0.7071],
-    [     0, 1,       0],
-    [0.7071, 0,  0.7071]];
-var m3 = [
-    [0.7071, 0.7071, 0],
-    [-0.7071, 0.7071, 0],
-    [0, 0, 1]];
-var identity = [
-    [1, 0, 0],
-    [0, 1, 0],
-    [0, 0, 1]];
-var camera = new Camera([0, 0, -4], identity);
-var background_color = [0, 0, 0];
-var spheres = [
-    new Sphere([0, -1, 3], 1, [255, 0, 0], 500, 0.2),         // red
-    new Sphere([2, 0, 4], 1, [0, 0, 255], 500, 0.3),          // blue
-    new Sphere([-2, 0, 4], 1, [0, 255, 0], 10, 0.4),          // green
-    new Sphere([0, -5001, 0], 5000, [255, 255, 0], 1000, 0.5),// yellow Earth
-];
-var lights = [
-    new Light(Light.AMBIENT, 0.2),
-    new Light(Light.POINT, 0.6, [2, 1, 0]),
-    new Light(Light.DIRECTIONAL, 0.2, [1, 4, 4])
-];
+// ======================================================================
+// Graphics functions.
+// ======================================================================
 
 // Converts 2D canvas coordinates to 3D viewport coordinates.
-var CanvasToViewport = function(p2d) {
+function CanvasToViewport(p2d) {
   return [
       p2d[0] * viewport_size / canvas.width,
       p2d[1] * viewport_size / canvas.height,
       projection_plane_z];
 }
 
-var IntersectRaySphere = function(origin, direction, sphere) {
+function IntersectRaySphere(origin, direction, sphere) {
     // solves the quadratic equation
-    var r = sphere.radius;
-    var co = Subtract(origin, sphere.center);
+    let r = sphere.radius;
+    let co = Subtract(origin, sphere.center);
 
-    var a = DotProduct(direction, direction);
-    var b = 2 * DotProduct(co, direction);
-    var c = DotProduct(co, co) - (r ** 2);
+    let a = DotProduct(direction, direction);
+    let b = 2 * DotProduct(co, direction);
+    let c = DotProduct(co, co) - (r ** 2);
 
-    var discriminant = (b ** 2) - 4*a*c;
+    let discriminant = (b ** 2) - 4*a*c;
     if (discriminant < 0) {
         return [Infinity, Infinity];
     }
-    var t1 = (-b + Math.sqrt(discriminant)) / (2*a);
-    var t2 = (-b - Math.sqrt(discriminant)) / (2*a);
+    let t1 = (-b + Math.sqrt(discriminant)) / (2*a);
+    let t2 = (-b - Math.sqrt(discriminant)) / (2*a);
     return [t1, t2];
 }
 
-var ReflectRay = function(ray, normal) {
-    var dot_p = DotProduct(normal, ray);
+function ReflectRay(ray, normal) {
+    let dot_p = DotProduct(normal, ray);
     return Subtract(
         Multiply(
             2 * dot_p,
@@ -174,15 +141,15 @@ var ReflectRay = function(ray, normal) {
 }
 
 // Computes the intensity of light upon a given point
-var ComputeLighting = function(point, normal, view, s) {
-    var intensity = 0.0;
-    for (var i = 0; i < lights.length; i++) {
-        var light = lights[i];
+function ComputeLighting(point, normal, view, s) {
+    let intensity = 0.0;
+    for (let i = 0; i < lights.length; i++) {
+        let light = lights[i];
         if (light.type == Light.AMBIENT) {
             intensity += light.intensity;
         }
         else {
-            var l_vec, t_max;
+            let l_vec, t_max;
             if (light.type == Light.POINT) {
                 l_vec = Subtract(light.position, point);
                 t_max = 1;
@@ -193,23 +160,23 @@ var ComputeLighting = function(point, normal, view, s) {
             }
 
             // shadow check
-            var [shadow_sphere, shadow_t] = ClosestIntersection(point, l_vec, EPSILON, t_max);
+            let [shadow_sphere, shadow_t] = ClosestIntersection(point, l_vec, EPSILON, t_max);
             if (shadow_sphere != null) {
                 continue;
             }
 
             // diffuse reflection of matte objects
-            var n_dot_l = DotProduct(normal, l_vec);
+            let n_dot_l = DotProduct(normal, l_vec);
             if (n_dot_l > 0) {
                 intensity += light.intensity * n_dot_l / Norm(l_vec);
             }
 
             // specular reflection of shiny objects
             if (s != -1) {
-                var reflection_vec = ReflectRay(l_vec, normal);
-                var r_dot_v = DotProduct(reflection_vec, view);
+                let reflection_vec = ReflectRay(l_vec, normal);
+                let r_dot_v = DotProduct(reflection_vec, view);
                 if (r_dot_v > 0) {
-                    var r_v_len_prod = Norm(reflection_vec) * Norm(view);
+                    let r_v_len_prod = Norm(reflection_vec) * Norm(view);
                     intensity += light.intensity * (r_dot_v / r_v_len_prod) ** s;
                 }
             }
@@ -219,12 +186,12 @@ var ComputeLighting = function(point, normal, view, s) {
 }
 
 
-var ClosestIntersection = function(origin, direction, t_min, t_max) {
-    var closest_t = Infinity;
-    var closest_sphere = null;
+function ClosestIntersection(origin, direction, t_min, t_max) {
+    let closest_t = Infinity;
+    let closest_sphere = null;
 
-    for (var i = 0; i < spheres.length; i++) {
-        var ts = IntersectRaySphere(origin, direction, spheres[i]);
+    for (let i = 0; i < spheres.length; i++) {
+        let ts = IntersectRaySphere(origin, direction, spheres[i]);
         if (ts[0] < closest_t && t_min < ts[0] && ts[0] < t_max) {
             closest_t = ts[0];
             closest_sphere = spheres[i];
@@ -237,37 +204,79 @@ var ClosestIntersection = function(origin, direction, t_min, t_max) {
     return [closest_sphere, closest_t];
 }
 
-var TraceRay = function(origin, direction, t_min, t_max, recursion_depth) {
-    var [closest_sphere, closest_t] = ClosestIntersection(origin, direction, t_min, t_max);
+function TraceRay(origin, direction, t_min, t_max, recursion_depth) {
+    let [closest_sphere, closest_t] = ClosestIntersection(origin, direction, t_min, t_max);
     if (closest_sphere == null) {
         return background_color;
     }
-    var intersection_point = Add(origin, Multiply(closest_t, direction));
-    var normal = Normalize(Subtract(intersection_point, closest_sphere.center));
-    var view = Multiply(-1, direction);
-    var light_intensity = ComputeLighting(intersection_point, normal, view, closest_sphere.specular);
-    var local_color = Multiply(light_intensity, closest_sphere.color);
+    let intersection_point = Add(origin, Multiply(closest_t, direction));
+    let normal = Normalize(Subtract(intersection_point, closest_sphere.center));
+    let view = Multiply(-1, direction);
+    let light_intensity = ComputeLighting(intersection_point, normal, view, closest_sphere.specular);
+    let local_color = Multiply(light_intensity, closest_sphere.color);
     
-    var r = closest_sphere.reflective;
+    let r = closest_sphere.reflective;
     if (recursion_depth <= 0 || r <= 0) {
         return local_color;
     }
 
-    var reflected_ray = ReflectRay(view, normal);
-    var reflected_color = TraceRay(intersection_point, reflected_ray, EPSILON, Infinity, recursion_depth - 1);
+    let reflected_ray = ReflectRay(view, normal);
+    let reflected_color = TraceRay(intersection_point, reflected_ray, EPSILON, Infinity, recursion_depth - 1);
 
     local_color = Multiply(1 - r, local_color);
     reflected_color = Multiply(r, reflected_color);
     return Add(local_color, reflected_color);
 }
 
+
+// ======================================================================
+// Scene setup.
+// ======================================================================
+let viewport_size = 1;
+let projection_plane_z = 1;
+let EPSILON = 0.001;
+let depth = 3;
+let m1 = [
+    [ 1, 0, 0],
+    [0, 0.7071, 0.7071],
+    [0, -0.7071, 0.7071 ]];
+let m2 = [
+    [0.7071, 0, -0.7071],
+    [     0, 1,       0],
+    [0.7071, 0,  0.7071]];
+let m3 = [
+    [0.7071, 0.7071, 0],
+    [-0.7071, 0.7071, 0],
+    [0, 0, 1]];
+let identity = [
+    [1, 0, 0],
+    [0, 1, 0],
+    [0, 0, 1]];
+let camera = new Camera([0, 0, -4], identity);
+let background_color = [0, 0, 0];
+let spheres = [
+    new Sphere([0, -1, 3], 1, [255, 0, 0], 500, 0.2),         // red
+    new Sphere([2, 0, 4], 1, [0, 0, 255], 500, 0.3),          // blue
+    new Sphere([-2, 0, 4], 1, [0, 255, 0], 10, 0.4),          // green
+    new Sphere([0, -5001, 0], 5000, [255, 255, 0], 1000, 0.5),// yellow Earth
+];
+let lights = [
+    new Light(Light.AMBIENT, 0.2),
+    new Light(Light.POINT, 0.6, [2, 1, 0]),
+    new Light(Light.DIRECTIONAL, 0.2, [1, 4, 4])
+];
+
+// ======================================================================
 // main loop
-for (var x = -canvas.width/2; x < canvas.width/2; x++) {
-    for (var y = -canvas.height/2; y < canvas.height/2; y++) {
-        var direction = MultiplyMV(camera.rotation, CanvasToViewport([x, y]));
-        var color = TraceRay(camera.position, direction, 1, Infinity, depth)
+// ======================================================================
+
+for (let x = -canvas.width/2; x < canvas.width/2; x++) {
+    for (let y = -canvas.height/2; y < canvas.height/2; y++) {
+        let direction = MultiplyMV(camera.rotation, CanvasToViewport([x, y]));
+        let color = TraceRay(camera.position, direction, 1, Infinity, depth)
         PutPixel(x, y, color);
     }
 }
+
 UpdateCanvas();
 </script>
